--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -61,7 +61,7 @@
     <p>Sayvo requests microphone access solely for the voice recording feature in the text translation screen. Microphone access is optional and the app functions without it. Audio recorded through the microphone is processed the same way as shared audio files — sent to OpenAI for transcription and not stored.</p>
 
     <h2>6. Children's Privacy</h2>
-    <p>Sayvo is not directed at children under the age of 13. We do not knowingly collect any information from children.</p>
+    <p>Sayvo is rated 4+ and is safe for users of all ages. We do not knowingly collect personal information from any users, including children. If you are a parent or guardian and believe your child has provided personal information through the app, please contact us so we can take appropriate action.</p>
 
     <h2>7. Changes to This Policy</h2>
     <p>We may update this Privacy Policy from time to time. Any changes will be reflected on this page with an updated date.</p>
